[package]
name = "twitter-content-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, features = ["builder","gateway","client","rustls_backend","model","http"], version = "0.11.5" }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }